--- a/notebooks/test_notebook.ipynb
+++ b/notebooks/test_notebook.ipynb
@@ -2487,6 +2487,52 @@
    "source": [
     "pd.DataFrame.from_dict(a, orient='index')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-05T15:33:02.643020Z",
+     "start_time": "2019-09-05T15:33:02.639032Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = numpy.array([False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-05T15:33:09.206902Z",
+     "start_time": "2019-09-05T15:33:09.201921Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((a==False) if len(a)>2 else a==False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
