--- a/examples/Tutorial 1 - MetaFeaturesRegression + OpenML.ipynb
+++ b/examples/Tutorial 1 - MetaFeaturesRegression + OpenML.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tutorial 1 - Using MetaRegressionFeatures + OpenML API <a class=\"tocSkip\">\n",
     " \n",
-    "The objective of this tutorial is to show how to download datasets from OpenML API and calculate his metafeatures using `MetaRegressionFeatures` class from PyMeta."
+    "The objective of this tutorial is to show how to download datasets from OpenML API and calculate his meta features using `MetaRegressionFeatures` class from PyMeta."
    ]
   },
   {
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T00:43:11.239320Z",
-     "start_time": "2019-09-11T00:43:11.229921Z"
+     "end_time": "2019-09-13T09:00:56.169107Z",
+     "start_time": "2019-09-13T09:00:55.963428Z"
     }
    },
    "outputs": [
@@ -343,7 +343,7 @@
        "Name: MEDV, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get meta feature with MetaFeaturesRegression"
+    "## Get meta features with MetaFeaturesRegression"
    ]
   },
   {
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fit the metafeatures for Boston dataset."
+    "Fit the meta features for Boston dataset."
    ]
   },
   {
@@ -818,6 +818,7 @@
     }
    ],
    "source": [
+    "# get metafeatures as pandas.DataFrame\n",
     "mfr.qualities()"
    ]
   }
